<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="entity"
            type="com.tumeow.mochi.data.entities.MochiEntity" />
        
        <variable
            name="onClickbt"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/square_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/calendar_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/square"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:singleLine="true"
                android:text="@={entity.square}" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/calendar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:onClickListener="@{onClickbt}"
            app:layout_constraintBottom_toBottomOf="@+id/square_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/square_layout"
            app:srcCompat="@drawable/icon_calendar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blueee"
            android:fontFamily="@font/patrick_hand_sc"
            android:onClickListener="@{onClickbt}"
            android:text="@string/go"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/square_layout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/square_layout"
            app:layout_constraintTop_toBottomOf="@+id/square_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:fontFamily="@font/geo"
            android:onClickListener="@{onClickbt}"
            android:text="@string/showAll"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/go"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/go"
            app:layout_constraintTop_toBottomOf="@+id/calendar_icon" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mochiRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/go"
            tools:listitem="@layout/item_mochi" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayyy"
            app:layout_constraintBottom_toTopOf="@+id/mochiRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="72dp"
            android:backgroundTint="@color/blueee"
            android:onClickListener="@{onClickbt}"
            android:src="@drawable/icon_playlistadd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="36dp"
            app:tint="@color/white" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



